[tool.poetry]
name = "project-tt"
version = "0.1.0"
description = ""
authors = ["Vasyl <gluschenkov88@gmail.com>"]
readme = "README.md"
packages = [{include = "project_tt"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
alembic = "^1.12.0"
pymysql = "^1.1.0"
python-multipart = "^0.0.6"
pandas = "^2.1.0"
openpyxl = "^3.1.2"
mysql = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
